it passes test and looks like it builds repo